--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,23 +2,16 @@ scheduledScaling: |
   {
     "schedules": [
       {
-        "name": "cronjob-1",
-        "cron": "* * * * *",
-        "message": "hello from job 1"
+        "name": "scale to 2 every 2nd minute",
+        "cron": "*/2 * * * *",
+        "replicas": 2
       },
       {
-        "name": "cronjob-2",
-        "cron": "* * * * *",
-        "message": "hello from job 2"
+        "name": "scale to 3 every 3rd minute",
+        "cron": "*/3 * * * *",
+        "replicas": 5
       }
     ]
   }
 
-# apiVersion: v1
-# kind: ConfigMap
-# metadata:
-#   name: {{ .name }}
-# data:
-#   value: "{{ .message }}"
-#   cron: "{{ .cron }}"
-# ---
+name: foo
