--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,17 +1,19 @@
-scheduledScaling: |
-  {
-    "schedules": [
-      {
-        "name": "scale to 2 every 2nd minute",
-        "cron": "*/2 * * * *",
-        "replicas": 2
-      },
-      {
-        "name": "scale to 3 every 3rd minute",
-        "cron": "*/3 * * * *",
-        "replicas": 3
-      }
-    ]
-  }
+scheduledScaling:
+  enabled: true
+  config: |
+    {
+      "schedules": [
+        {
+          "name": "scale to 2 every 2nd minute",
+          "cron": "*/2 * * * *",
+          "replicas": 2
+        },
+        {
+          "name": "scale to 3 every 3rd minute",
+          "cron": "*/3 * * * *",
+          "replicas": 3
+        }
+      ]
+    }
 
 name: foo
