--- a/out.yaml
+++ b/out.yaml
@@ -13,8 +13,8 @@ metadata:
   name: scaling-role
   namespace: cronjob-sandbox
 rules:
-- apiGroups: ["apps"] # API group for Deployments
-  resources: 
+- apiGroups: [ "apps" ] # API group for Deployments
+  resources:
   - "deployments"
   - "deployments/scale"
   verbs:
@@ -58,7 +58,7 @@ spec:
       containers:
       - name: hello-container
         image: busybox
-        command: ["sh", "-c", "while true; do echo hello; sleep 1; done"]
+        command: [ "sh", "-c", "while true; do echo hello; sleep 1; done" ]
 ---
 # Source: scheduled-scaling-sandbox/templates/scaling.yaml
 apiVersion: apps/v1
@@ -79,57 +79,11 @@ spec:
       serviceAccountName: scaling-service-account
       containers:
       - name: scaler
-        image: bitnami/kubectl:latest
+        image: us-east1-docker.pkg.dev/dv01-prj-shared-art-reg-6j49/dv01-shared-art-reg-01/scaling-sandbox:v1
         command:
         - /bin/sh
         - -c
-        - |
-          #!/bin/bash
-          # Schedule configurations JSON array
-          scheduleConfigsJson='"[{\n  \"name\": \"weekday-evening\",\n  \"startHour\": 18,\n  \"endHour\": 22,\n  \"days\": [1, 2, 3, 4, 5],\n  \"replicas\": 1\n},\n{\n  \"name\": \"weekend\",\n  \"startHour\": 0,\n  \"endHour\": 24,\n  \"days\": [6, 7],\n  \"replicas\": 2\n}]\n"'
+        - sleep 100
+---
 
-          echo "Booting..."
-          echo "Raw Schedule configurations:"
-          echo "$scheduleConfigsJson"
 
-          echo "Parsed Schedule configurations:"
-          echo "$scheduleConfigsJson" | jq . 2>&1
-          if [ $? -ne 0 ]; then
-            echo "Invalid JSON"
-            exit 1
-          fi
-          echo "Boot Successful"
-
-          while true; do
-            # Get current day and hour
-            currentDay=$(date +%u)  # Day of the week (1-7, Monday is 1)
-            currentHour=$(date +%H) # Hour of the day (00-23)
-
-            echo "----------------------------------"
-            echo "Current day: $currentDay"
-            echo "Current hour: $currentHour"
-
-            # Iterate over each scheduleConfig
-            echo "$scheduleConfigsJson" | jq -c '.[]' | while read -r scheduleConfigJson; do
-              echo "----------------------------------"
-              # Extract fields from the current scheduleConfig
-              scheduleName=$(echo "$scheduleConfigJson" | jq -r '.name')
-              startHour=$(echo "$scheduleConfigJson" | jq -r '.startHour')
-              endHour=$(echo "$scheduleConfigJson" | jq -r '.endHour')
-              days=$(echo "$scheduleConfigJson" | jq -r '.days')
-              replicas=$(echo "$scheduleConfigJson" | jq -r '.replicas')
-
-              echo "Checking schedule: $scheduleName"
-              echo "Start hour: $startHour, End hour: $endHour"
-              echo "Days: $days, Replicas: $replicas"
-
-              if [[ $currentHour -ge $startHour && $currentHour -lt $endHour && $days == *$currentDay* ]]; then
-                echo "Scaling for $scheduleName to $replicas replicas"
-                echo kubectl scale deployment the-name-from-values-file-deploy --replicas=$replicas
-                break
-              else
-                echo "Not scaling for $scheduleName"
-              fi
-            done
-            sleep 10
-          done
