fix timezone issue, add validation

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,8 +5,8 @@ scheduledScaling:
       "schedules": [
         {
           "name": "weekday",
-          "startHour": 0,
-          "endHour": 24,
+          "startTime": "00:00",
+          "durationMinutes": 1440,
           "days": [1, 2, 3, 4, 5],
           "replicas": 3
         }
