--- a/out.yaml
+++ b/out.yaml
@@ -86,4 +86,4 @@ spec:
         - name: DEPLOYMENT
           value: the-name-from-values-file-deploy
         - name: SCHEDULES
-          value: "{\n  \"schedules\": [\n    {\n      \"name\": \"weekday\",\n      \"startTime\": \"00:00\",\n      \"durationMinutes\": 1440,\n      \"days\": [1, 2, 3, 4, 5],\n      \"replicas\": 3\n    }\n  ]\n}\n"
+          value: "{\n  \"schedules\": [\n    {\n      \"name\": \"weekday\",\n      \"startTime\": \"00:00\",\n      \"endTime\": \"00:00\",\n      \"days\": [1, 2, 3, 4, 5],\n      \"replicas\": 3\n    }\n  ]\n}\n"
